force-app/main/default/objects/B2B_Avg_Freight_Rates__mdt/B2B_Avg_Freight_Rates__mdt.object-meta.xml
<CustomObject>
    <label>B2B Avg Freight Rates</label>
    <pluralLabel>B2B Avg Freight Rates</pluralLabel>
</CustomObject>