force-app/main/default/objects/B2B_Avg_Freight_Rates__mdt/fields/Australia_Rates__c.field-meta.xml
<CustomField>
    <fullName>Australia_Rates__c</fullName>
    <label>Australia Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>