force-app/main/default/objects/B2B_Avg_Freight_Rates__mdt/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <label>Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>