force-app/main/default/objects/B2B_Avg_Freight_Rates__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (lb)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>